# rl-training-2025-codes

./: .gitignore  README.md  main.py  pyproject.toml
src/T00_setup/: test_run.ipynb
src/T01/: S01.ipynb  S03.ipynb
src/T01_introduction/: S01_lunar_lander.ipynb  S02.ipynb  S02_cart_pole.ipynb  S03_empty_minigrid.ipynb  S04.ipynb
src/T01_introduction/_temp/: custom_env_1.ipynb
src/T02_model_based/: S01.ipynb  S01_episode.ipynb  S01_gridworld_random_policy.ipynb  S02_closer_look.ipynb  S03.ipynb  S03_pi_star.pkl  S03_policy_iteration.ipynb  S04_episode_improved.ipynb  S04_gridworld_improved_policy.ipynb  S05_value_iteration.ipynb  gridworld.py  test.ipynb
src/T02_model_based/_temp/: unravel_index_test.ipynb
src/T03_value_based/: S01.mc_test.ipynb  S02_mc_prediction.ipynb  S03_mc_control.ipynb  S04_mc_control_off_policy.ipynb  S05_SARSA.ipynb  S06_q_learning.ipynb  S07_expected_sarsa.ipynb  S08_q_learning_replay.ipynb  S9_q_learning_continuous.ipynb  T01.mc_test.ipynb
src/T04_functional_approx/: S01.ipynb  S02.ipynb  S03.ipynb
src/T05_deep_q/: S01.ipynb  S02.ipynb  S03.ipynb
