[project]
name = "rl-training-2025-codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[box2d,other]==1.1.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "minigrid>=3.0.0",
    "notebook>=7.4.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "ruff>=0.12.2",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.6.0",
    "swig>=4.3.1",
    "uv>=0.7.20",
    "xlsxwriter>=3.2.5",
]
